# lingua-rs

./: .gitignore  Cargo.toml
.github/workflows/: build.yml
common/: Cargo.toml
common/src/: alphabet.rs  isocode.rs  language.rs  lib.rs
language-models/de/: Cargo.toml  build.rs
language-models/de/src/: lib.rs
model-builder/: Cargo.toml
model-builder/src/: lib.rs
src/: builder.rs  constant.rs  detector.rs  json.rs  language.rs  lib.rs  model.rs
