# Copyright © 2020-today Peter M. Stahl pemistahl@gmail.com
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either expressed or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[workspace]
members = ["language-models/*", "common", "model-builder"]

[package]
name = "lingua"
version = "1.3.3"
authors = ["Peter M. Stahl <pemistahl@gmail.com>"]
description = """
An accurate natural language detection library, suitable for long and short text alike
"""
homepage = "https://github.com/pemistahl/lingua-rs"
repository = "https://github.com/pemistahl/lingua-rs"
documentation = "https://docs.rs/lingua"
license = "Apache-2.0"
readme = "README.md"
edition = "2021"
categories = ["text-processing"]
keywords = [
    "language-processing",
    "language-detection",
    "language-recognition",
    "nlp"
]

[dependencies]
include_dir = "0.7.2"
itertools = "0.10.3"
maplit = "1.0.2"
once_cell = "1.10.0"
rayon = "1.5.1"
regex = "1.5.5"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
strum = "0.24.0"
strum_macros = "0.24.0"
zip = "0.5.13"
common = { path = "common" }
lingua-english-language-model = { path = "language-models/en", version = "=1.0.1", optional = true }
lingua-french-language-model = { path = "language-models/fr", version = "=1.0.1", optional = true }
lingua-german-language-model = { path = "language-models/de", version = "=1.0.1", optional = true }
lingua-italian-language-model = { path = "language-models/it", version = "=1.0.1", optional = true }

[dev-dependencies]
cld2 = "1.0.2"
float-cmp = "0.9.0"
indoc = "1.0.4"
mockall = "0.11.0"
rstest = "0.12.0"
tempfile = "3.3.0"
titlecase = "1.1.0"
whatlang = "0.13.0"

[features]
default = ["english", "french", "german", "italian"]
english = ["lingua-english-language-model"]
french = ["lingua-french-language-model"]
german = ["lingua-german-language-model"]
italian = ["lingua-italian-language-model"]
